<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_meeting_to_update"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_title_update"
            android:hint="@string/title"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_place_update"
            android:hint="@string/place"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_participants_update"
            android:hint="@string/participants"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_date_update"
            android:hint="@string/date_e_g_2025_04_07"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_time_update"
            android:hint="@string/time_e_g_14_00"/>

        <Button
            android:id="@+id/btn_searchToUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_meeting_to_update"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_meeting_to_update"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:hint="@string/new_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPlace"
            android:hint="@string/new_place"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editParticipants"
            android:hint="@string/new_participants"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDate"
            android:hint="@string/new_date"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTime"
            android:hint="@string/new_time"/>
        <Button
            android:id="@+id/saveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"/>


    </LinearLayout>

</ScrollView>