<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_title"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_by_place"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_place"
            android:hint="@string/place"
            android:inputType="text"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/search_by_participants"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_participants"
            android:hint="@string/participants"
            android:inputType="text"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_date"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_date"
            android:hint="@string/date_e_g_2025_04_07"
            android:inputType="date"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_time"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_time"
            android:hint="@string/time_e_g_14_00"
            android:inputType="time"
            android:layout_marginBottom="8dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_result"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

    </LinearLayout>


</ScrollView>

