<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/participants"
            android:inputType="textMultiLine"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_e_g_2025_04_07"
            android:inputType="date"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_e_g_14_00"
            android:inputType="time"
            android:layout_marginBottom="16dp"/>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>
</ScrollView>